# mirrornode-platform

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  GOVERNANCE.md  Makefile  README.md  REPO_MAP.md  package-lock.json  package.json  patch_librarian_err.py  patch_librarian_fixes.py  patch_meta.py  patch_osiris_btn.py  pnpm-lock.yaml  vercel.json  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
app/: globals.css  layout.tsx  page.tsx
app/agents/: page.tsx
app/audit/: AuditCheckoutButton.tsx  page.tsx
app/dashboard/: page.tsx
app/librarian/: page.tsx
app/little-fox/: page.tsx
app/mirror-mirror/: page.tsx
app/osiris/: main.py  page.tsx  pyproject.toml  rotan_routes.py
app/osiris-audit/: OsirisAuditCheckoutButton.tsx  page.tsx
app/success/: page.tsx
app/thoth/: page.tsx
components/little-fox/: LittleFoxConsole.tsx
components/mirrornode/: MirrornodeProcessSequence.tsx  MirrornodeVisualSurface.tsx  PublicLaneOverview.tsx  SurfaceBoundaryNotice.tsx  SurfaceHero.tsx  SurfaceLaneSelector.tsx  SurfaceNodeInspector.tsx  SurfaceStateBadge.tsx
components/osiris/: OsirisAuditSequence.tsx  OsirisRuntimeAdapterPanel.tsx
content/: little-fox.ts
content/little-fox/: console.ts
content/mirrornode/: boundaries.test.ts  boundaries.ts  laneInteraction.test.ts  laneInteraction.ts  lanes.ts  nodes.ts  types.ts
docs/: PUBLIC_SURFACE_BOUNDARY_IMPLEMENTATION.md  vercel-env-checklist.md
fusion/: index.ts  types.ts
lib/: agents.ts  embeddings.ts  env.ts  links.ts  pinecone.ts
utils/: stripe.ts
(+45 files in other folders)
